# AugHyE

./: Dockerfile  README.md  config.py  data_loader.py  test.py  train.py
esmv3/: pyproject.toml
esmv3/esm3/: pretrained.py
esmv3/esm3/layers/: blocks.py  transformer_stack.py
esmv3/esm3/models/: esm3.py  function_decoder.py
esmv3/esm3/sdk/: api.py  sagemaker.py
esmv3/esm3/tokenization/: __init__.py  function_tokenizer.py  residue_tokenizer.py  sasa_tokenizer.py  sequence_tokenizer.py  ss_tokenizer.py  structure_tokenizer.py
esmv3/esm3/utils/: decoding.py  encoding.py  generation.py  generation_test.py  misc.py  misc_test.py  sampling.py  sampling_test.py
esmv3/esm3/utils/constants/: esm3.py  models.py
esmv3/esm3/utils/function/: encode_decode.py  interpro.py  lsh.py  tfidf.py
esmv3/esm3/utils/structure/: affine3d.py  aligner.py  metrics.py  normalize_coordinates.py  predicted_aligned_error.py  protein_chain.py  protein_complex.py  protein_structure.py
esmv3/esm3/widgets/components/: sasa_prompt_selector.py  secondary_structure_prompt_selector.py  sequence_prompt_selector.py
esmv3/esm3/widgets/utils/: clients.py  indexing.py  prompting.py  protein_import.py  types.py
esmv3/esm3/widgets/views/: esm3_prompt_preview.py  generation.py  inverse_folding.py  login.py  prediction.py
esmv3/examples/: esmc_examples.py  folding_inverse_folding_example.py  forge_generate.py  local_generate.py  raw_forwards.py
esmv3/layers/: attention.py  structure_proj.py
esmv3/models/: esmc.py  vqvae.py
esmv3/sdk/: __init__.py  forge.py
model/: AugHyE.py  bernnet.py  (+1 more)
(+10 files in other folders)
